--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ wp-content/uploads/
 wp-content/mu-plugins/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
+wp-content/plugins/
+wp-content/themes/
 /.vscode
 
 /.htaccess
